// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpensesSummary component should render corectly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     total 
    $2.35
  </h1>
</div>
`;

exports[`ExpensesSummary component should render corectly with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     total 
    $235.00
  </h1>
</div>
`;
